Autcomplete style on mobile : fix overflow (#201)

--- a/src/components/algolia/AutoCompleteSearchField.css
+++ b/src/components/algolia/AutoCompleteSearchField.css
@@ -71,6 +71,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-align: left;
+    max-width: 100%;
     top : 50%;
     transform: translateY(-50%);
 }
